# g3log_example_integration

./: .travis.yml  CMakeLists.txt  README.md
g3log_integration/: CMakeLists.txt  example_g3log_main.cpp
g3sinks_integration/: CMakeLists.txt  example_g3sinks_main.cpp
scripts/: buildAndRunExample.sh  travis-bootstrap-ubuntu.sh
